!25 added wrapper api and test * Merge remote-tracking branch 'origin/newMaster' into newMaster * added wrapper api and test * 1 added some log into hybm_core_api.cpp * 1 refined cmake list of UT * Merge remote-tracking branch 'origin/newMaster' into newMaster * added wrapper api and test * added wrapper api and test * Merge remote-tracking branch 'origin/newMaster' into newMaster * 1 added some log into hybm_core_api.cpp * 1 refined cmake list of UT * Merge remote-tracking branch 'origin/newMaster' into newMaster * 1 added some log into hybm_core_api.cpp * Merge remote-tracking branch 'memfabric_hybrid_offical/master' into newMaster * 1 refined cmake list of UT

--- a/test/ut/CMakeLists.txt
+++ b/test/ut/CMakeLists.txt
@@ -15,6 +15,8 @@ if(NOT EXISTS ${CHECK_FILE_LINKS})
     add_dependencies(test_mf_hy googletest)
 endif()
 
+add_definitions(-DOUT_LIB_PATH="${TARGET_INSTALL_DIR}")
+
 target_compile_options(test_mf_hy PUBLIC -D_GNU_SOURCE -g)
 target_link_directories(test_mf_hy PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib/)
 set_target_properties(test_mf_hy PROPERTIES OUTPUT_NAME "test_mf_hy")
@@ -23,6 +25,7 @@ set_target_properties(test_mf_hy PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_O
 target_link_libraries(test_mf_hy gtest dl libacc_tcp_net.a)
 target_include_directories(test_mf_hy PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/testcase
+        ${CMAKE_CURRENT_SOURCE_DIR}/shmem_wrapper
         ${PROJECT_SMEM_SRC_BASE}/include/host
         ${PROJECT_SMEM_SRC_BASE}/csrc
         ${PROJECT_SMEM_SRC_BASE}/csrc/net
