!33 added library version in strings * added library version in strings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 if (${CMAKE_BUILD_TYPE} MATCHES "RELEASE")
-    add_compile_options(-O2 -fpic)
+    add_compile_options(-O2 -fstack-protector-strong -Wl,-z,noexecstack -Wl,-z,relro -Wl,-z,now -fPIE -fPIC -ftrapv -s)
+    message(STATUS "build type set to RELEASE")
 else ()
     add_compile_options(-g -rdynamic)
 endif ()
