!121 net_engine init * clean code * 解决merge代码问题 * Merge branch 'br_A3_shm_bm_630' of https://gitee.com/ascend/memfabric_… * net_engine init

--- a/src/memcache/csrc/CMakeLists.txt
+++ b/src/memcache/csrc/CMakeLists.txt
@@ -30,7 +30,7 @@ aux_source_directory(local_service MMC_SRC_LOCAL_SERVICE)
 aux_source_directory(meta_data MMC_SRC_ENTITIES)
 aux_source_directory(meta_service MMC_SRC_META_SERVICE)
 aux_source_directory(net MMC_SRC_NET)
-aux_source_directory(net/acc_links_impl MMC_SRC_NET)
+aux_source_directory(net/acc_links_impl MMC_SRC_NET_ACC)
 aux_source_directory(proto MMC_SRC_PROTO)
 aux_source_directory(under_api/mf_smem MMC_SRC_UNDER_API_MF_SMEM)
 
@@ -41,6 +41,7 @@ set(PLATFORM_SRC ${MMC_SRC_COMMON}
         ${MMC_SRC_ENTITIES}
         ${MMC_SRC_META_SERVICE}
         ${MMC_SRC_NET}
+        ${MMC_SRC_NET_ACC}
         ${MMC_SRC_PROTO}
         ${MMC_SRC_UNDER_API_MF_SMEM}
         mmc.cpp
