--- a/test/ut/CMakeLists.txt
+++ b/test/ut/CMakeLists.txt
@@ -21,6 +21,21 @@ file(GLOB_RECURSE UT_SOURCE_FILES *.cpp
         ${PROJECT_MMC_SRC_BASE}/csrc/mmc_client.cpp
         ${PROJECT_MMC_SRC_BASE}/csrc/mmc_service.cpp
 )
+include_directories(
+        ${PROJECT_SMEM_SRC_BASE}/include/host
+        ${PROJECT_SMEM_SRC_BASE}/csrc
+        ${PROJECT_SMEM_SRC_BASE}/csrc/net
+        ${PROJECT_SMEM_SRC_BASE}/csrc/common
+        ${PROJECT_SMEM_SRC_BASE}/csrc/config_store
+        ${PROJECT_SMEM_SRC_BASE}/csrc/under_api/hybm_core
+        ${PROJECT_MMC_SRC_BASE}/include
+        ${PROJECT_MMC_SRC_BASE}/csrc/common
+        ${PROJECT_MMC_SRC_BASE}/csrc/net
+        ${PROJECT_MMC_SRC_BASE}/csrc/net/acc_links_impl
+        ${PROJECT_MMC_SRC_BASE}/csrc/proto
+        ${PROJECT_MMC_SRC_BASE}/csrc/under_api/mf_smem
+        ${PROJECT_MMC_SRC_BASE}/../util/csrc
+)
 message(STATUS "llt build")
 add_executable(test_mf_hy ${UT_SOURCE_FILES})
 
@@ -45,19 +60,44 @@ target_link_libraries(test_mf_hy gtest dl libacc_tcp_net.a gcov pthread)
 target_include_directories(test_mf_hy PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/testcase
         ${CMAKE_CURRENT_SOURCE_DIR}/shmem_wrapper
-        ${PROJECT_SMEM_SRC_BASE}/include/host
-        ${PROJECT_SMEM_SRC_BASE}/csrc
-        ${PROJECT_SMEM_SRC_BASE}/csrc/net
-        ${PROJECT_SMEM_SRC_BASE}/csrc/common
-        ${PROJECT_SMEM_SRC_BASE}/csrc/config_store
         ${PROJECT_OUTPUT_PATH}/3rdparty/acc_links/net/include
-        ${PROJECT_SMEM_SRC_BASE}/csrc/under_api/hybm_core
-
-        ${PROJECT_MMC_SRC_BASE}/include
-        ${PROJECT_MMC_SRC_BASE}/csrc/common
-        ${PROJECT_MMC_SRC_BASE}/csrc/net
-        ${PROJECT_MMC_SRC_BASE}/csrc/proto
-        ${PROJECT_MMC_SRC_BASE}/csrc/under_api/mf_smem
-
         ${PROJECT_UTIL_SRC_BASE}
 )
+
+FUNCTION(ADD_UNIT_TEST TEST_NAME)
+    set(ONE_VALUE_ARGS PREFIX)
+    set(MULTI_VALUE_ARGS FILES BUILD_FLAGS DEPENDS INCLUDE_PATHS LINK_LIBRARIES THIRDPARTY_DEPENDS)
+    cmake_parse_arguments(ADD_UNIT_TEST "" "${ONE_VALUE_ARGS}" "${MULTI_VALUE_ARGS}" ${ARGN})
+    set(TEST_TARGET_NAME ${TEST_NAME})
+    add_executable(${TEST_TARGET_NAME} ${ADD_UNIT_TEST_FILES})
+    target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib/)
+    target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${GTEST_BUILD_LIB_DIR}/lib)
+    target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_OUTPUT_PATH}/memcache/lib64)
+    install(TARGETS ${TEST_TARGET_NAME}
+            DESTINATION ${TARGET_INSTALL_BIN_DIR}/bin/ut/
+            PERMISSIONS ${CACHE_INSTALL_EXE_PERMISSIONS})
+    IF(ADD_UNIT_TEST_INCLUDE_PATHS)
+        target_include_directories(${TEST_TARGET_NAME} PUBLIC ${ADD_UNIT_TEST_INCLUDE_PATHS})
+    ENDIF()
+
+    IF(ADD_UNIT_TEST_LINK_LIBRARIES)
+        target_link_libraries(${TEST_TARGET_NAME} ${ADD_UNIT_TEST_LINK_LIBRARIES})
+    ENDIF()
+
+    IF(ADD_UNIT_TEST_DEPENDS)
+        add_dependencies(${TEST_TARGET_NAME} ${ADD_UNIT_TEST_DEPENDS})
+    ENDIF()
+
+    IF(ADD_UNIT_TEST_BUILD_FLAGS)
+        target_compile_options(${TEST_TARGET_NAME} PUBLIC ${ADD_UNIT_TEST_BUILD_FLAGS})
+    ENDIF()
+
+    add_test(NAME ${TEST_NAME} COMMAND $<TARGET_FILE:${TEST_TARGET_NAME}>)
+
+ENDFUNCTION()
+
+set(TEST_INCLUDE_PATHS ../../src/memcache/)
+set(TEST_SRC_PATHS ${CMAKE_CURRENT_SOURCE_DIR})
+set(TEST_DEPEND_LIBS gtest dl libacc_tcp_net.a mmc_static gcov pthread)
+
+add_subdirectory(testcase/memcache/csrc/net)
