!126 meta service: net server&amp;client * ping num ok * Merge remote-tracking branch 'refs/remotes/origin/br_A3_shm_bm_630' in… * Merge remote-tracking branch 'refs/remotes/origin/br_A3_shm_bm_630' in… * test ok * compile ok * Merge remote-tracking branch 'refs/remotes/origin/br_A3_shm_bm_630' in… * meta service: net server&client * clean code * 解决merge代码问题 * Merge branch 'br_A3_shm_bm_630' of https://gitee.com/ascend/memfabric_… * net_engine init

--- a/src/memcache/csrc/CMakeLists.txt
+++ b/src/memcache/csrc/CMakeLists.txt
@@ -36,7 +36,7 @@ aux_source_directory(under_api/mf_smem MMC_SRC_UNDER_API_MF_SMEM)
 
 # set whole source for platform
 set(PLATFORM_SRC ${MMC_SRC_COMMON}
-        ${MMC_SRC_LOCAL_SERVICE}
+        ${MMC_SRC_CLIENT}
         ${MMC_SRC_LOCAL_SERVICE}
         ${MMC_SRC_ENTITIES}
         ${MMC_SRC_META_SERVICE}
