!136 add test case for meta mng alloc * rpc call alloc success * fix * Merge branch 'dev4' of https://gitee.com/mathlj/memfabric_hybrid into … * fix * 打开alloc注释 * fix * fix * rpc call alloc success * fix * fix * FIX * 添加ut * fix * fix * fix * allocator实现 * rpc call alloc success * Merge remote-tracking branch 'refs/remotes/liujing/dev4' into br_A3_sh… * Local_service和client 共用一个net_client * add test case for meta mng alloc

--- a/test/ut/CMakeLists.txt
+++ b/test/ut/CMakeLists.txt
@@ -13,6 +13,7 @@ file(GLOB_RECURSE UT_SOURCE_FILES *.cpp
         ${PROJECT_MMC_SRC_BASE}/csrc/common/*
         ${PROJECT_MMC_SRC_BASE}/csrc/local_service/*
         ${PROJECT_MMC_SRC_BASE}/csrc/meta_service/*
+        ${PROJECT_MMC_SRC_BASE}/csrc/entities/*
         ${PROJECT_MMC_SRC_BASE}/csrc/net/*
         ${PROJECT_MMC_SRC_BASE}/csrc/proto/*
         ${PROJECT_MMC_SRC_BASE}/csrc/under_api/*
@@ -31,8 +32,10 @@ include_directories(
         ${PROJECT_MMC_SRC_BASE}/include
         ${PROJECT_MMC_SRC_BASE}/csrc/common
         ${PROJECT_MMC_SRC_BASE}/csrc/net
+        ${PROJECT_MMC_SRC_BASE}/csrc/entities
         ${PROJECT_MMC_SRC_BASE}/csrc/net/acc_links_impl
         ${PROJECT_MMC_SRC_BASE}/csrc/meta_service
+        ${PROJECT_MMC_SRC_BASE}/csrc/entities
         ${PROJECT_MMC_SRC_BASE}/csrc/local_service
         ${PROJECT_MMC_SRC_BASE}/csrc/proto
         ${PROJECT_MMC_SRC_BASE}/csrc/under_api/mf_smem
