--- a/test/ut/testcase/memcache/csrc/meta_service/CMakeLists.txt
+++ b/test/ut/testcase/memcache/csrc/meta_service/CMakeLists.txt
@@ -1,6 +1,7 @@
 file(GLOB_RECURSE meta_service_src
         ${CMAKE_CURRENT_SOURCE_DIR}/test_meta_manager.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/meta_service_net.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/service_interface.cpp
 )
 ADD_UNIT_TEST(test_meta_service
         FILES ${meta_service_src} ${TEST_SRC_PATHS}/ut_main.cpp
@@ -14,6 +15,16 @@ file(GLOB_RECURSE global_allocator_src
 )
 ADD_UNIT_TEST(test_global_allocator
         FILES ${global_allocator_src} ${TEST_SRC_PATHS}/ut_main.cpp
+        INCLUDE_PATHS  ${TEST_INCLUDE_PATHS}
+        LINK_LIBRARIES ${TEST_DEPEND_LIBS}
+        BUILD_FLAGS -fpermissive --coverage
+)
+
+file(GLOB_RECURSE service_interface
+        ${CMAKE_CURRENT_SOURCE_DIR}/service_interface.cpp
+)
+ADD_UNIT_TEST(test_service_interface
+        FILES ${service_interface} ${TEST_SRC_PATHS}/ut_main.cpp
         INCLUDE_PATHS  ${TEST_INCLUDE_PATHS}
         LINK_LIBRARIES ${TEST_DEPEND_LIBS}
         BUILD_FLAGS -fpermissive --coverage
