--- a/test/ut/testcase/memcache/csrc/meta_service/CMakeLists.txt
+++ b/test/ut/testcase/memcache/csrc/meta_service/CMakeLists.txt
@@ -10,6 +10,16 @@ ADD_UNIT_TEST(test_meta_service
         BUILD_FLAGS -fpermissive --coverage
 )
 
+file(GLOB_RECURSE meta_manager_src
+        ${CMAKE_CURRENT_SOURCE_DIR}/test_meta_manager.cpp
+)
+ADD_UNIT_TEST(test_meta_manager
+        FILES ${meta_manager_src} ${TEST_SRC_PATHS}/ut_main.cpp
+        INCLUDE_PATHS  ${TEST_INCLUDE_PATHS}
+        LINK_LIBRARIES ${TEST_DEPEND_LIBS}
+        BUILD_FLAGS -fpermissive --coverage
+)
+
 file(GLOB_RECURSE global_allocator_src
         ${CMAKE_CURRENT_SOURCE_DIR}/global_allocator.cpp
 )
