!260 update loopup map and read write lock and add test cases * update loopup map and read write lock and add test cases

--- a/test/ut/CMakeLists.txt
+++ b/test/ut/CMakeLists.txt
@@ -120,3 +120,5 @@ set(TEST_DEPEND_LIBS gtest dl libacc_tcp_net.a mmc_static gcov pthread smem_stat
 
 add_subdirectory(testcase/memcache/csrc/net)
 add_subdirectory(testcase/memcache/csrc/meta_service)
+add_subdirectory(testcase/memcache/csrc/common)
+add_subdirectory(testcase/memcache/csrc/entities)
