--- a/src/memcache/csrc/python_wrapper/CMakeLists.txt
+++ b/src/memcache/csrc/python_wrapper/CMakeLists.txt
@@ -6,15 +6,15 @@ execute_process(
 )
 string(STRIP ${PYTHON_SYS_PATH} PYTHON_SYS_PATH)
 
-include_directories("../../include")
-
 set(PYTHON_PACKAGE_NAME "_pymmc")
 
 find_package(pybind11 REQUIRED)
 
 pybind11_add_module(_pymmc ${SOURCES} pymmc.cpp)
 
+target_link_libraries(_pymmc PUBLIC mmc_shared)
+
 install(TARGETS _pymmc
         LIBRARY DESTINATION ${TARGET_INSTALL_DIR}/memcache/lib64
-        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+        PERMISSIONS OWNER_READ OWNER_EXECUTE
 )
