!317 mock cann * DT打通

--- a/src/hybm/csrc/CMakeLists.txt
+++ b/src/hybm/csrc/CMakeLists.txt
@@ -65,5 +65,5 @@ install(
 install(
         TARGETS hybmm_static hybmm_shared
         DESTINATION ${PROJECT_HYBM_OUTPUT}/lib
-        PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ WORLD_READ
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ WORLD_READ
 )
