--- a/src/memcache/csrc/CMakeLists.txt
+++ b/src/memcache/csrc/CMakeLists.txt
@@ -83,5 +83,5 @@ install(FILES ${HEADER_FILES} DESTINATION ${TARGET_INSTALL_DIR}/memcache/include
 # install library
 install(TARGETS mmc_shared
         LIBRARY DESTINATION ${TARGET_INSTALL_DIR}/memcache/lib64
-        PERMISSIONS OWNER_READ OWNER_EXECUTE
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
 )
