--- a/src/smem/csrc/CMakeLists.txt
+++ b/src/smem/csrc/CMakeLists.txt
@@ -62,5 +62,5 @@ install(FILES ${DEVICE_HEADER_FILES} DESTINATION ${TARGET_INSTALL_DIR}/smem/incl
 # install library
 install(TARGETS smem_shared
         LIBRARY DESTINATION ${TARGET_INSTALL_DIR}/smem/lib64
-        PERMISSIONS OWNER_READ OWNER_EXECUTE
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
         )
