--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,7 +7,8 @@ include_directories(
         ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/include/
         ${PROJECT_SOURCE_DIR}/3rdparty/net/acc_links/src/net/include
 )
-
+add_subdirectory(3rdparty)
 link_directories(${PROJECT_3RDPARTY_BIN_DIR}/googletest/lib)
 
 add_subdirectory(ut)
+add_subdirectory(ut/mock)
