!333 dram adapter mmc * dram adapter mmc

--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -11,6 +11,7 @@ ock.mmc.local_service.device_id = 0
 ock.mmc.local_service.bm_rank_id = 0
 ock.mmc.local_service.world_size = 1
 ock.mmc.local_service.config_store_url = tcp://127.0.0.1:6000
+ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
 ock.mmc.local_service.auto_ranking = 1
 ock.mmc.local_service.bm_id = 0
 ock.mmc.local_service.protocol = sdma
