--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -1,4 +1,5 @@
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
+ock.mmc.meta_service.log_level = 1
 
 ock.mmc.tls.enable = false
 ock.mmc.tls.top.path = /opt/ock/security/
