--- a/test/ut/testcase/memcache/csrc/meta_service/CMakeLists.txt
+++ b/test/ut/testcase/memcache/csrc/meta_service/CMakeLists.txt
@@ -39,6 +39,16 @@ ADD_UNIT_TEST(test_service_interface
         BUILD_FLAGS -fpermissive --coverage
 )
 
+file(GLOB_RECURSE service_error
+        ${CMAKE_CURRENT_SOURCE_DIR}/meta_service_error.cpp
+)
+ADD_UNIT_TEST(test_service_error
+        FILES ${service_error} ${TEST_SRC_PATHS}/ut_main.cpp
+        INCLUDE_PATHS  ${TEST_INCLUDE_PATHS}
+        LINK_LIBRARIES ${TEST_DEPEND_LIBS}
+        BUILD_FLAGS -fpermissive --coverage
+)
+
 file(GLOB_RECURSE bm_init_src
         ${CMAKE_CURRENT_SOURCE_DIR}/bm_init.cpp
 )
