--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -3,6 +3,7 @@ ock.mmc.meta_service_url = tcp://127.0.0.1:5000
 ock.mmc.tls.enable = false
 ock.mmc.tls.top.path = /opt/ock/security/
 ock.mmc.tls.ca.path = certs/ca.cert.pem
+ock.mmc.tls.ca.crl.path = certs/ca.crl.pem
 ock.mmc.tls.cert.path = certs/client.cert.pem
 ock.mmc.tls.key.path = certs/client.private.key.pem
 ock.mmc.tls.package.path = /opt/ock/security/libs/
