--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -4,6 +4,7 @@ ock.mmc.meta_service.log_level = 1
 ock.mmc.tls.enable = false
 ock.mmc.tls.top.path = /opt/ock/security/
 ock.mmc.tls.ca.path = certs/ca.cert.pem
+ock.mmc.tls.ca.crl.path = certs/ca.crl.pem
 ock.mmc.tls.cert.path = certs/server.cert.pem
 ock.mmc.tls.key.path = certs/server.private.key.pem
 ock.mmc.tls.package.path = /opt/ock/security/libs/
