!364 fix client log error

--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -1,5 +1,5 @@
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
-ock.mmc.meta_service.log_level = 1
+ock.mmc.log_level = info
 
 ock.mmc.tls.enable = false
 ock.mmc.tls.top.path = /opt/ock/security/
