--- a/test/ut/CMakeLists.txt
+++ b/test/ut/CMakeLists.txt
@@ -48,34 +48,34 @@ include_directories(
         ${ASCEND_CANN_PACKAGE_PATH}/aarch64-linux/include/
 )
 message(STATUS "llt build")
-add_executable(test_mf_hy ${UT_SOURCE_FILES})
+# add_executable(test_mf_hy ${UT_SOURCE_FILES})
 
-set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/test/3rdparty)
-set(GTEST_INSTALL_DIR ${PROJECT_3RDPARTY_BIN_DIR}/googletest)
+# set(THIRD_PARTY_DIR ${PROJECT_SOURCE_DIR}/test/3rdparty)
+# set(GTEST_INSTALL_DIR ${PROJECT_3RDPARTY_BIN_DIR}/googletest)
 
-set(CHECK_FILE_LINKS ${GTEST_INSTALL_DIR}/include/gtest/gtest.h)
+# set(CHECK_FILE_LINKS ${GTEST_INSTALL_DIR}/include/gtest/gtest.h)
 
-if(NOT EXISTS ${CHECK_FILE_LINKS})
-    add_dependencies(test_mf_hy googletest)
-endif()
+# if(NOT EXISTS ${CHECK_FILE_LINKS})
+#     add_dependencies(test_mf_hy googletest)
+# endif()
 
-add_definitions(-DOUT_LIB_PATH="${TARGET_INSTALL_DIR}")
+# add_definitions(-DOUT_LIB_PATH="${TARGET_INSTALL_DIR}")
 
-add_link_options(-lgcov --coverage)
-TARGET_SPDLOG_HEADER_ONLY(test_mf_hy)
-target_compile_options(test_mf_hy PUBLIC -D_GNU_SOURCE -g -fprofile-arcs -ftest-coverage -DUT_ENABLED)
-target_link_directories(test_mf_hy PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib/)
-target_link_directories(test_mf_hy PUBLIC ${ASCEND_CANN_PACKAGE_PATH}/aarch64-linux/lib64)
-set_target_properties(test_mf_hy PROPERTIES OUTPUT_NAME "test_mf_hy")
-set_target_properties(test_mf_hy PROPERTIES CLEAN_DIRECT_OUTPUT 1)
-set_target_properties(test_mf_hy PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_PATH}/bin)
-target_link_libraries(test_mf_hy gtest dl libacc_tcp_net.a gcov pthread hybmm_static)
-target_include_directories(test_mf_hy PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/testcase
-        ${CMAKE_CURRENT_SOURCE_DIR}/shmem_wrapper
-        ${PROJECT_OUTPUT_PATH}/3rdparty/acc_links/net/include
-        ${PROJECT_UTIL_SRC_BASE}
-)
+# add_link_options(-lgcov --coverage)
+# TARGET_SPDLOG_HEADER_ONLY(test_mf_hy)
+# target_compile_options(test_mf_hy PUBLIC -D_GNU_SOURCE -g -fprofile-arcs -ftest-coverage -DUT_ENABLED)
+# target_link_directories(test_mf_hy PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib/)
+# target_link_directories(test_mf_hy PUBLIC ${ASCEND_CANN_PACKAGE_PATH}/aarch64-linux/lib64)
+# set_target_properties(test_mf_hy PROPERTIES OUTPUT_NAME "test_mf_hy")
+# set_target_properties(test_mf_hy PROPERTIES CLEAN_DIRECT_OUTPUT 1)
+# set_target_properties(test_mf_hy PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_OUTPUT_PATH}/bin)
+# target_link_libraries(test_mf_hy gtest dl libacc_tcp_net.a gcov pthread hybmm_static)
+# target_include_directories(test_mf_hy PRIVATE
+#         ${CMAKE_CURRENT_SOURCE_DIR}/testcase
+#         ${CMAKE_CURRENT_SOURCE_DIR}/shmem_wrapper
+#         ${PROJECT_OUTPUT_PATH}/3rdparty/acc_links/net/include
+#         ${PROJECT_UTIL_SRC_BASE}
+# )
 
 FUNCTION(ADD_UNIT_TEST TEST_NAME)
     set(ONE_VALUE_ARGS PREFIX)
@@ -118,7 +118,7 @@ ENDFUNCTION()
 
 set(TEST_INCLUDE_PATHS ../../src/memcache/)
 set(TEST_SRC_PATHS ${CMAKE_CURRENT_SOURCE_DIR})
-set(TEST_DEPEND_LIBS gtest dl libacc_tcp_net.a mmc_static gcov pthread smem_static)
+set(TEST_DEPEND_LIBS gtest dl libacc_tcp_net.a mmc_static gcov pthread)
 
 add_subdirectory(testcase/memcache/csrc/net)
 add_subdirectory(testcase/memcache/csrc/meta_service)
