--- a/test/ut/testcase/memcache/csrc/meta_service/CMakeLists.txt
+++ b/test/ut/testcase/memcache/csrc/meta_service/CMakeLists.txt
@@ -88,3 +88,13 @@ ADD_UNIT_TEST(test_global_allocator_thread
         LINK_LIBRARIES ${TEST_DEPEND_LIBS}
         BUILD_FLAGS -fpermissive --coverage
 )
+
+file(GLOB_RECURSE meta_container_lru_src
+        ${CMAKE_CURRENT_SOURCE_DIR}/test_meta_container_lru.cpp
+)
+ADD_UNIT_TEST(test_meta_container_lru
+        FILES ${meta_container_lru_src} ${TEST_SRC_PATHS}/ut_main.cpp
+        INCLUDE_PATHS  ${TEST_INCLUDE_PATHS}
+        LINK_LIBRARIES ${TEST_DEPEND_LIBS}
+        BUILD_FLAGS -fpermissive --coverage
+)
