--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -1,5 +1,7 @@
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
 ock.mmc.log_level = info
+ock.mmc.evict_threshold_high = 70
+ock.mmc.evict_threshold_low = 60
 
 ock.mmc.tls.enable = false
 ock.mmc.tls.top.path = /opt/ock/security/
