!401 Modify the build Method of spdlog

--- a/test/ut/CMakeLists.txt
+++ b/test/ut/CMakeLists.txt
@@ -83,8 +83,8 @@ FUNCTION(ADD_UNIT_TEST TEST_NAME)
     cmake_parse_arguments(ADD_UNIT_TEST "" "${ONE_VALUE_ARGS}" "${MULTI_VALUE_ARGS}" ${ARGN})
     set(TEST_TARGET_NAME ${TEST_NAME})
     add_executable(${TEST_TARGET_NAME} ${ADD_UNIT_TEST_FILES})
-    TARGET_SPDLOG_HEADER_ONLY(${TEST_TARGET_NAME})
     target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib/)
+    target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib/)
     target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${GTEST_BUILD_LIB_DIR}/lib)
     target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_OUTPUT_PATH}/memcache/lib64)
     target_link_directories(${TEST_TARGET_NAME}  PUBLIC ${PROJECT_OUTPUT_PATH}/smem/lib64)
