--- a/src/memcache/csrc/CMakeLists.txt
+++ b/src/memcache/csrc/CMakeLists.txt
@@ -15,6 +15,8 @@ include_directories(
         ${PROJECT_UTIL_SRC_BASE}
         ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/include/
         ${PROJECT_SOURCE_DIR}/3rdparty/net/acc_links/src/net/include
+        ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/include/
+        ${PROJECT_SOURCE_DIR}/3rdparty/log/spdlog/include/
 )
 
 ## define src variables
@@ -58,21 +60,35 @@ set(PLATFORM_SRC ${MMC_SRC_COMMON}
 
 ## build the static and shared library
 add_library(mmc_objects OBJECT ${PLATFORM_SRC})
-target_spdlog(mmc_objects)
 target_link_libraries(mmc_objects PUBLIC smem)
 target_compile_options(mmc_objects PRIVATE -fPIC)
 
 add_library(mmc_static STATIC $<TARGET_OBJECTS:mmc_objects>)
 set_target_properties(mmc_static PROPERTIES OUTPUT_NAME "mf_memcache")
-target_spdlog(mmc_static)
 target_link_directories(mmc_static PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib)
 target_link_libraries(mmc_static PUBLIC pthread libacc_tcp_net.a)
+target_link_directories(mmc_static PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib)
+target_link_directories(mmc_static PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib64)
+if (x${CMAKE_BUILD_TYPE} STREQUAL "xDEBUG")
+    target_link_libraries(mmc_static PUBLIC pthread libspdlogd.a)
+else (
+    target_link_libraries(mmc_static PUBLIC pthread libspdlog.a)
+)
+endif ()
+message(STATUS "spdlog: check if need to build at ${CHECK_FILE_LINKS}")
 
 add_library(mmc_shared SHARED $<TARGET_OBJECTS:mmc_objects>)
 set_target_properties(mmc_shared PROPERTIES OUTPUT_NAME "mf_memcache")
-target_spdlog(mmc_shared)
 target_link_directories(mmc_shared PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib)
 target_link_libraries(mmc_shared PUBLIC smem_shared pthread libacc_tcp_net.a)
+target_link_directories(mmc_shared PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib)
+target_link_directories(mmc_shared PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/spdlog/lib64)
+if (x${CMAKE_BUILD_TYPE} STREQUAL "xDEBUG")
+    target_link_libraries(mmc_shared PUBLIC pthread libspdlogd.a)
+else (
+    target_link_libraries(mmc_shared PUBLIC pthread libspdlog.a)
+)
+endif ()
 
 if(BUILD_PYTHON STREQUAL "ON")
     add_subdirectory(python_wrapper)
