!408 配置文件增加注释

--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -1,6 +1,9 @@
+# metaservice启动url，需要与metaservice配置一致
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
+# 日志级别
 ock.mmc.log_level = info
 
+# TLS安全通信证书相关配置
 ock.mmc.tls.enable = false
 ock.mmc.tls.top.path = /opt/ock/security/
 ock.mmc.tls.ca.path = certs/ca.cert.pem
@@ -9,14 +12,23 @@ ock.mmc.tls.cert.path = certs/client.cert.pem
 ock.mmc.tls.key.path = certs/client.private.key.pem
 ock.mmc.tls.package.path = /opt/ock/security/libs/
 
+# local service使用HBM时占用的卡号
 ock.mmc.local_service.device_id = 0
+# 从0开始为client编码
 ock.mmc.local_service.bm_rank_id = 0
+# client的总数
 ock.mmc.local_service.world_size = 1
+# BM服务启动url
 ock.mmc.local_service.config_store_url = tcp://127.0.0.1:6000
+# ip需要设为RDAM网卡ip，可以使用show_gids命令查询
 ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
+# 是否开启rank id自动分配，启用时bm_rank_id失效
 ock.mmc.local_service.auto_ranking = 1
+# 数据传输协议，DRAM池使用roce，HBM池使用sdma
 ock.mmc.local_service.protocol = roce
+# DRAM空间使用量，单位字节，和HBM二选一，需要2M对齐
 ock.mmc.local_service.dram.size = 2097152
+# HBM空间使用量，单位字节，和DRAM二选一
 ock.mmc.local_service.hbm.size = 0
 
 ock.mmc.client.timeout.seconds = 60
