--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -1,8 +1,14 @@
+# metaservice启动url
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
+# 日志级别
 ock.mmc.log_level = info
+
+# 触发淘汰的水位，单位为空间使用百分比
 ock.mmc.evict_threshold_high = 70
+# 淘汰的目标水位，单位为空间使用百分比
 ock.mmc.evict_threshold_low = 60
 
+# TLS安全通信证书相关配置
 ock.mmc.tls.enable = false
 ock.mmc.tls.top.path = /opt/ock/security/
 ock.mmc.tls.ca.path = certs/ca.cert.pem
