!424 transport归一 * cleancode * 解决掩码模式获取IP不正确的问题 * 添加判断server id无效时，采用ip地址作为server id * Merge branch 'br_A3_shm_bm_630_0815' of https://gitee.com/ascend/memfa… * 添加打印super pod信息 * cleancode * cleancode * cleancode * cleancode * 修复rdma rkey不正确的问题 * Merge branch 'br_A3_shm_bm_630' of https://gitee.com/ascend/memfabric_… * 在qp info 增加自己mr信息 * Merge branch 'br_A3_shm_bm_630_0815' of https://gitee.com/ascend/memfa… * 添加判断rank之间是否能建立sdma连接，提通过smem接口提示是否可达远端rank 功能 * 修复了dram池的一些问题 * 解决compose transport编译告警问题 * 修改获取qp info的时机 * 调试example修改 * example修改 * smem层适配修改 * 修改entity适配transport * update * Merge branch 'br_A3_shm_bm_630_0815' of https://gitee.com/ascend/memfa… * update * 完善composeTransport实现 * 添加节点变化 * 添加节点变化 * 完善composeTransport实现 * 完善composeTransport * 删除旧RDMA实现 * 补充connection manager * Merge branch 'br_A3_shm_bm_630_0815' of https://gitee.com/ascend/memfa… * 增加部分实现 * 添加compose实现 * 添加make * Merge branch 'br_A3_shm_bm_630_0815' of https://gitee.com/ascend/memfa… * 备份部分rdma代码 * transport归一 * Merge branch 'br_A3_shm_bm_630_0815' of https://gitee.com/ascend/memfa… * 修改transport

--- a/src/hybm/csrc/CMakeLists.txt
+++ b/src/hybm/csrc/CMakeLists.txt
@@ -7,11 +7,11 @@ include_directories(
         ${PROJECT_HYBM_SRC_BASE}/csrc/driver/userspace
         ${PROJECT_HYBM_SRC_BASE}/csrc/entity
         ${PROJECT_HYBM_SRC_BASE}/csrc/mm
-        ${PROJECT_HYBM_SRC_BASE}/csrc/trans
-        ${PROJECT_HYBM_SRC_BASE}/csrc/trans/hcom
-        ${PROJECT_HYBM_SRC_BASE}/csrc/trans/hccp
         ${PROJECT_HYBM_SRC_BASE}/csrc/transport
-        ${PROJECT_HYBM_SRC_BASE}/csrc/transport/hccp_rdma
+        ${PROJECT_HYBM_SRC_BASE}/csrc/transport/compose
+        ${PROJECT_HYBM_SRC_BASE}/csrc/transport/device
+        ${PROJECT_HYBM_SRC_BASE}/csrc/transport/host
+        ${PROJECT_HYBM_SRC_BASE}/csrc/transport/utils
         ${PROJECT_HYBM_SRC_BASE}/csrc/under_api
 )
 
@@ -23,10 +23,10 @@ aux_source_directory(driver/userspace SRC_FILES_DRIVER)
 aux_source_directory(entity SRC_FILES_ENTITY)
 aux_source_directory(mm SRC_FILES_MEM_MANAGER)
 aux_source_directory(transport SRC_FILES_TRANSPORT)
-aux_source_directory(transport/hccp_rdma SRC_FILES_TRANSPORT)
-aux_source_directory(trans SRC_FILES_TRANSPORT)
-aux_source_directory(trans/hcom SRC_FILES_TRANSPORT)
-aux_source_directory(trans/hccp SRC_FILES_TRANSPORT)
+aux_source_directory(transport/compose SRC_FILES_TRANSPORT)
+aux_source_directory(transport/device SRC_FILES_TRANSPORT)
+aux_source_directory(transport/host SRC_FILES_TRANSPORT)
+aux_source_directory(transport/utils SRC_FILES_TRANSPORT)
 aux_source_directory(under_api SRC_FILES_CANN)
 
 # set whole source for hybmm src files
