!468 新增日志轮转配置 * 新增日志轮转配置

--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -2,6 +2,10 @@
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
 # 日志级别
 ock.mmc.log_level = info
+# 日志文件大小单位MB[1,500]
+ock.mmc.log_rotation_file_size = 20
+# 日志文件个数[1,50]
+ock.mmc.log_rotation_file_count = 50
 
 # 触发淘汰的水位，单位为空间使用百分比
 ock.mmc.evict_threshold_high = 70
