--- a/config/mmc-meta.conf
+++ b/config/mmc-meta.conf
@@ -1,7 +1,14 @@
-# metaservice启动url
+# meta service启动url，在K8S集群meta service主备高可用场景，在Pod启动时自动修改为PodIP
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
+# 是否使能主备高可用部署
+ock.mmc.meta.ha.enable = false
 # 日志级别
 ock.mmc.log_level = info
+# 日志目录，可配置为绝对路径或相对路径，系统会自动追加logs目录
+# 默认配置下日志绝对路径为：/path/to/mmc_meta_service/../logs
+# 假设mmc_meta_service所在路径为/usr/local/mxc/memfabric_hybrid/latest/aarch64-linux/bin
+# 则日志路径为/usr/local/mxc/memfabric_hybrid/latest/aarch64-linux/logs
+ock.mmc.log_path = .
 # 日志文件大小单位MB[1,500]
 ock.mmc.log_rotation_file_size = 20
 # 日志文件个数[1,50]
