--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -1,4 +1,6 @@
-# metaservice启动url，需要与metaservice配置一致
+# meta service启动url
+# 在meta service非HA场景，请与mmc-meta.conf中的配置项保持一致
+# 在K8S集群meta service主备高可用场景，请配置为ClusterIP地址
 ock.mmc.meta_service_url = tcp://127.0.0.1:5000
 # 日志级别
 ock.mmc.log_level = info
@@ -19,7 +21,7 @@ ock.mmc.local_service.device_id = 0
 ock.mmc.local_service.bm_rank_id = 0
 # client的总数
 ock.mmc.local_service.world_size = 1
-# BM服务启动url
+# BM服务启动url，在K8S集群meta service主备高可用场景，在Pod启动时自动修改为PodIP
 ock.mmc.local_service.config_store_url = tcp://127.0.0.1:6000
 # ip需要设为RDAM网卡ip，可以使用show_gids命令查询
 ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
@@ -27,7 +29,7 @@ ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
 ock.mmc.local_service.auto_ranking = 1
 # 数据传输协议，DRAM池使用roce，HBM池使用sdma
 ock.mmc.local_service.protocol = roce
-# DRAM空间使用量，单位字节，和HBM二选一，需要2M对齐
+# DRAM空间使用量，单位字节，默认128MB，和HBM二选一，需要2M对齐
 ock.mmc.local_service.dram.size = 134217728
 # HBM空间使用量，单位字节，和DRAM二选一
 ock.mmc.local_service.hbm.size = 0
