--- a/src/smem/csrc/CMakeLists.txt
+++ b/src/smem/csrc/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(
         ${PROJECT_SMEM_SRC_BASE}/csrc/net
         ${PROJECT_SMEM_SRC_BASE}/csrc/smem_shm
         ${PROJECT_HYBM_SRC_BASE}/include
+        ${PROJECT_UTIL_SRC_BASE}/htracer
         ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/include/
 )
 
@@ -45,7 +46,7 @@ target_link_libraries(smem_static PUBLIC pthread libacc_tcp_net.a hybmm_static)
 add_library(smem_shared SHARED $<TARGET_OBJECTS:smem_objects>)
 set_target_properties(smem_shared PROPERTIES OUTPUT_NAME "mf_smem")
 target_link_directories(smem_shared PUBLIC ${PROJECT_3RDPARTY_BIN_DIR}/acc_links/lib)
-target_link_libraries(smem_shared PUBLIC pthread libacc_tcp_net.a hybmm_shared)
+target_link_libraries(smem_shared PUBLIC pthread libacc_tcp_net.a htracer_static hybmm_shared)
 
 if(BUILD_PYTHON STREQUAL "ON")
     add_subdirectory(python_wrapper)
