!573 improve dram and hbm size setting in local config

--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -23,9 +23,11 @@ ock.mmc.local_service.config_store_url = tcp://127.0.0.1:6000
 ock.mmc.local_service.hcom_url = tcp://127.0.0.1:7000
 # 数据传输协议，DRAM池使用roce，HBM池使用sdma
 ock.mmc.local_service.protocol = roce
-# DRAM空间使用量，单位字节，默认128MB，和HBM二选一，需要2M对齐
-ock.mmc.local_service.dram.size = 134217728
-# HBM空间使用量，单位字节，和DRAM二选一
+# DRAM空间使用量，支持134217728、2048KB/2048K、200MB/200mb/200m、2.5GB或1TB样式配置，大小写不敏感
+# 系统自动计算对齐2MB，对齐2MB后，DRAM和HBM不能同时为0；最大值1TB
+ock.mmc.local_service.dram.size = 128MB
+# HBM空间使用量，单位字节，配置样式参考DRAM；
+# 系统自动计算对齐2MB，对齐2MB后，DRAM和HBM不能同时为0；最大值1TB
 ock.mmc.local_service.hbm.size = 0
 
 ock.mmc.client.timeout.seconds = 60
