!586 fix htrace bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ option(BUILD_GIT_COMMIT_GEN_FILE "generate commit log file" ON)
 option(INSTALL_HIGH_LEVEL_API "add device high level api into pkg" ON)
 option(BUILD_PYTHON "build python file" ON)
 option(BUILD_ASAN "build python file" OFF)
-option(BUILD_HTRACER "build htracer" OFF)
+option(ENABLE_HTRACE "build htracer" OFF)
 
 message(STATUS "BUILD_EXAMPLE = ${BUILD_EXAMPLE}")
 message(STATUS "BUILD_TESTS = ${BUILD_TESTS}")
@@ -22,8 +22,7 @@ message(STATUS "BUILD_GIT_COMMIT = ${BUILD_GIT_COMMIT}")
 message(STATUS "BUILD_GIT_COMMIT_GEN_FILE = ${BUILD_GIT_COMMIT_GEN_FILE}")
 message(STATUS "BUILD_PYTHON = ${BUILD_PYTHON}")
 message(STATUS "BUILD_ASAN = ${BUILD_ASAN}")
-message(STATUS "BUILD_HTRACER = ${BUILD_HTRACER}")
-
+message(STATUS "ENABLE_HTRACE = ${ENABLE_HTRACE}")
 message(STATUS "CMAKE_BUILD_TYPE = ${CMAKE_BUILD_TYPE}")
 
 #set(CMAKE_VERBOSE_MAKEFILE ON)
@@ -63,8 +62,8 @@ if(BUILD_TESTS STREQUAL "ON")
     set(BUILD_OPEN_ABI "ON")
 endif()
 
-if (BUILD_HTRACER STREQUAL "ON")
-    add_definitions(-DBUILD_HTRACER=ON)
+if (ENABLE_HTRACE STREQUAL "ON")
+    add_definitions(-DENABLE_HTRACE=ON)
 endif ()
 
 if(NOT BUILD_OPEN_ABI STREQUAL "ON")
