--- a/src/memcache/csrc/daemon/CMakeLists.txt
+++ b/src/memcache/csrc/daemon/CMakeLists.txt
@@ -1,8 +1,8 @@
 file(GLOB_RECURSE DAEMON_SRCS *.cc *.cpp *.h)
 
-add_executable(mmc_meta_service ${DAEMON_SRCS})
+add_executable(mmc_meta_service ${DAEMON_SRCS} $<TARGET_OBJECTS:htracer_object>)
 
-target_link_libraries(mmc_meta_service PUBLIC mmc_static smem_static pthread libacc_tcp_net.a)
+target_link_libraries(mmc_meta_service PUBLIC mmc_static pthread libacc_tcp_net.a)
 
 install(TARGETS mmc_meta_service
         RUNTIME DESTINATION ${TARGET_INSTALL_DIR}/memcache/bin
