--- a/config/mmc-local.conf
+++ b/config/mmc-local.conf
@@ -26,8 +26,12 @@ ock.mmc.local_service.protocol = roce
 # DRAM空间使用量，支持134217728、2048KB/2048K、200MB/200mb/200m、2.5GB或1TB样式配置，大小写不敏感
 # 系统自动计算对齐2MB，对齐2MB后，DRAM和HBM不能同时为0；最大值1TB
 ock.mmc.local_service.dram.size = 128MB
-# HBM空间使用量，单位字节，配置样式参考DRAM；
+# HBM空间使用量，配置样式参考DRAM；
 # 系统自动计算对齐2MB，对齐2MB后，DRAM和HBM不能同时为0；最大值1TB
 ock.mmc.local_service.hbm.size = 0
+
+# client请求meta service连接不存在时，重试总时长（重试间隔为200ms）
+# 默认值为0，表示不重式失败时直接返回，取值范围[0, 600000]
+ock.mmc.client.retry_milliseconds = 0
 
 ock.mmc.client.timeout.seconds = 60
